After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 127262 - Redraw problems with freeze frames
Redraw problems with freeze frames
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: GUI
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
: 127261 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2003-11-18 04:20 UTC by Luke Hutchison
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: 2.3/2.4


Attachments
First image, freeze line half shown (89.57 KB, image/png)
2003-11-18 05:01 UTC, Luke Hutchison
Details
Second screenshot, row label redraw glitches shown (88.47 KB, image/png)
2003-11-18 05:01 UTC, Luke Hutchison
Details

Description Luke Hutchison 2003-11-18 04:20:40 UTC
The vertical line that designates a freeze frame doesn't go all the way
down the spreadsheet in v1.2.1.  (See attached .png)  How far down it goes
differs each time it redraws.  As you can see, the image attached only has
the line to 1/3 of the way down the sheet (based on the scrollbar on the
side).  (It's a big sheet.)

Also, using the scroll arrows on the vertical scrollbar to scroll up 1 cell
at a time causes the cell labels on the left (designating the row number)
to get black lines between them (see 2nd attached image).  Much less major
than the first bug, but still a redraw glitch.
Comment 1 Jody Goldberg 2003-11-18 04:29:07 UTC
*** Bug 127261 has been marked as a duplicate of this bug. ***
Comment 2 Jody Goldberg 2003-11-18 04:30:22 UTC
Probably related to 16bit coordinates in the underlying gtk drawing. 
We should just draw the visible portion of the line rather than being
lazy and drawing from top to bottom and having the server cl;ip.
Comment 3 Luke Hutchison 2003-11-18 05:00:20 UTC
I didn't realize bugzilla actually created this bug entry, it wasn't
responding when I submitted.

Attachments below.
Comment 4 Luke Hutchison 2003-11-18 05:01:00 UTC
Created attachment 21565 [details]
First image, freeze line half shown
Comment 5 Luke Hutchison 2003-11-18 05:01:48 UTC
Created attachment 21566 [details]
Second screenshot, row label redraw glitches shown
Comment 6 Jody Goldberg 2003-11-18 06:00:58 UTC
fixed in cvs.  Patch will be in 1.2.2